# ARMv8-AArch64-Assembler-and-Emulator

./: .gitignore  CMakeLists.txt
doc/: Checkpoint.tex  Makefile  Report.tex
src/: ArrayList.c  ArrayList.h  BinarySearchTree.c  BinarySearchTree.h  Makefile  Map.c  Map.h  TODO  TreeMap.c  TreeMap.h  consts.h  emulate.c  global.h  part3.s  runTest  utils.c  utils.h
src/TESTS/branch/: b1.s
src/TESTS/general/: add02.s  add03_exp.lst  and01.s  beq01.s  beq02.s  eor01.s  factorial.s  factorial_exp.lst  factorial_exp.out  label1.s  ldr02.s  ldr05.s  ldr08.s  ldr10_exp.lst  ldr15.s  ldr16.s  loop01.s  loop01_exp.lst  loop03.s  mov05.s  mov06.s  mov06_exp.lst  mov08.s  str01_exp.lst  str04_exp.lst  sub01.s  sub03.s  tst01.s  tst02.s  tst03.s
src/TESTS/shifts/: ror1.s  ror2.s
src/TESTS/wide_moves/: movk1.s  movk1_exp.lst  movk3.s  (+3 more)
src/assemble/: assemble.c  assemble.h  register.h
src/branch/: b2.s
src/emulate/: consts.h  emulate.c
src/general/: add01.s  add03.s  add05.s  add06.s  add_imm_sh.s  add_reg.s  b01.s  bne01.s  bne02.s  dot_int.s  dummy_ldr.s  ldr04.s  ldr06.s  ldr07.s  ldr09.s  ldr10.s  ldr_lit02.s  ldr_lit03.s  mov03.s  mul01.s  nop.s  str01.s  str03.s  str04.s  sub02.s  tst05.s
src/io/: io.c  io.h
src/memory/: memory.c  memory.h
src/shifts/: asr1.s  asr2.s
src/system/: system.c  system.h
test/: test.txt
test/branch/: b3.s
test/general/: add04.s  example.s  ldr01.s  ldr03.s  ldr11.s  ldr_lit.s  loop02.s  mov01.s  mov02.s  mov04.s  mov07.s  or02.s
test/wide_moves/: movk2.s  movk2_exp.lst  movk3_exp.lst  movk4.s  movn_exp.lst  movz_exp.lst
(+13 files in other folders)
